<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Тайтлы активитей -->
    <string name="app_name">VK Spy</string>
    <string name="main">Main</string>
    <string name="login">Login</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_filter">Who to spy</string>
    <string name="welcome_text">Welcome to the brave new world of privacy and social networks!</string>
    <string name="user">User</string>
    <string name="app_description"><![CDATA[<b>VK Spy</b> invisibly monitors your friends and VK users activity.]]></string>
    <!-- Окно "об приложении" -->
    <string name="app_about">About the app</string>
    <string name="app_about_button">@string/ok</string>
    <string name="app_about_description"><![CDATA[This app invisibly monitors your friends and VK users activity. <br/> <br/> <a href="http://vk.com/happysanta">Happy Santa LLC</a> © 2014 <br/> <br/> Created by <a href="http://vk.com/kio_tk">Denis Davidov</a>, <a href="http://vk.com/ez">Evgeny Zinoviev</a>, <a href="http://vk.com/emc2">Ivan Gusev</a>.]]></string>

    <!-- Настройки, подсказки к настройкам и разное -->
    <string name="enable_spy">Enable spy</string>
    <string name="logout">Log out</string>
    <string name="logout_message">We’ll stop monitoring after logging out.</string>
    <string name="logout_title">Are you sure you want to log out?</string>
    <string name="logout_accept">Log out</string>
    <string name="logout_cancel">Cancel</string>
    <string name="signin">Sign In</string>
    <string name="apply">Apply</string>
    <string name="enabled">Enabled</string>
    <string name="way_to_notify">Notification type</string>
    <string name="popup">Pop up</string>
    <string name="notification">Notification</string>
    <string name="offline_notifications">Offline notifications</string>
    <string name="online_notifications">Online notifications</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="notifications">Notifications</string>
    <string name="need_access">Access is needed to use application</string>
    <string name="help">Help</string>
    <string name="close">Close</string>

    <!-- Ошибки -->
    <string name="error">Error</string>
    <string name="server_did_not_respond">Server did not respond</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="no_browser">Oops, you have no browser.</string>

    <!-- Времена -->
    <string name="at">at</string>
    <string name="ago">ago</string>
    <string name="now">now</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="moment">a moment</string>
    <string name="min">min</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>
    <string name="undefined">undefined</string>
    <string name="day">d</string>
    <string name="sec">sec</string>
    <string name="moment_ago">right now</string>

    <!-- вкладки на странице -->
    <string name="onlines">Onlines</string>
    <string name="typings">Typings</string>

    <!-- текста уведомлений -->
    <string name="come_online_m">is online</string>
    <string name="come_online_f">is online</string>
    <string name="gone_offline_m">has gone offline</string>
    <string name="gone_offline_f">has gone offline</string>
    <string name="was_writing_m">was typing 3 minutes ago</string>
    <string name="was_writing_f">@string/was_writing_m</string>
    <string name="was_writing_chat_m">was typing 3 in the chat minutes ago</string>
    <string name="was_writing_chat_f">@string/was_writing_chat_m</string>

    <!-- статус на странице -->
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="last_seen">last seen</string>
    <string name="last_seen_f">last seen</string>

    <!-- Текста окон -->
    <string name="no_typings">Nobody\'s typed yet</string>
    <string name="no_tracks">No one to spy on</string>
    <string name="no_events">There are no events</string>
    <string name="no_friends">You have no friends</string>
    <string name="filter_tip">Choose person</string>
    <string name="important">Important</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>

    <!-- УБИРФИЧА -->
    <string name="durov_function_title">Überfunktion</string>
    <string name="durov_function_decription">Spy upon Mr.Durov!</string>
    <string name="durov_start_title">Exclusive feature</string>
    <string name="durov_start_message">Enable spying upon Mr.Durov?</string>
    <string name="durov_start_ok">@string/spyon</string>
    <string name="durov_start_update">Update</string>
    <string name="durov_start_cancel">Who’s that guy?</string>
    <string name="durov_function_activating_title">Awesome feature</string>
    <string name="durov_function_activating_message">Loading</string>
    <string name="durov_function_updating">Updating</string>
    <string name="durov_function_almost">Almost ready</string>
    <string name="durov_function_activated_title">Spy upon Durov</string>
    <string name="durov_function_activated">Activated</string>
    <string name="durov_function_updated">Updated</string>
    <string name="durov_wanna_see">Wanna see!</string>
    <string name="durov_joke_title">@string/durov_function_title</string>
    <string name="durov_joke_message">Just like Pavel, we don’t compromise. Sure, he has hidden his online status and disappeared from sight thanks to the delevopers. But not for our dark minds. Happy Santa casts back freedom as vita sene libertate nihil.</string>
    <string name="durov_joke_button">@string/durov_start_ok</string>
    <string name="open_profile">Open profile</string>
    <string name="send_logs">Send logs</string>
    <string name="vk_down">@string/unknown_error</string>
    <string name="additional">Additional</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="silent">Silent</string>
    <string name="typings_notifications">Typing notifications</string>
    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="ok">OK</string>
    <string name="login_title">Terms</string>
    <string name="login_message">You agree with temrs, right?</string>

    <!-- Числительные -->
    <plurals name="usersSelected">
        <item quantity="zero">Nobody\'s chosen</item>
        <item quantity="one">One user selected</item>
        <item quantity="few">%d users selected</item>
        <item quantity="many">%d users selected</item>
        <item quantity="other">%d users selected</item>
    </plurals>
    <plurals name="onlines_notification">
        <item quantity="one">And one more user go online</item>
        <item quantity="many">And %d more users go online</item>
        <item quantity="other">And %d more users go online</item>
    </plurals>
    <plurals name="offlines_notification">
        <item quantity="one">And one more have gone offline</item>
        <item quantity="many">And %d more have gone offline</item>
        <item quantity="other">And %d more have gone offline</item>
    </plurals>
    <plurals name="chat_notification">
        <item quantity="one">And one more were typing in the chat</item>
        <item quantity="many">And %d more were typing in the chat</item>
        <item quantity="other">And %d more were typing in the chat</item>
    </plurals>

    <string name="title_activity_info">InfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="license">Open source licenses</string>
    <string name="termsandpolicy_abl">@string/termsandpolicy</string>
    <string name="termsandpolicy">Terms of use and Privacy policy</string>
    <string name="agreewithprivacy">By using this application you agree to the</string>
    <string name="privacypolicy_title">Privacy Policy</string>
    <string name="privacypolicy"><![CDATA[
    1. In order to improve the quality of our software, we anonymously collect information while the app is running using Bugsense. Policy of information assemblage, storage, transmission in this case is <a href=”http://www.splunk.com/view/SP-CAAAAAG”> Splunk Inc. policy</a>. Information, received by the developers using Bugsense, is not transmitted or sold to a third party.
<br/><br/>2. VK users’ data, used by the app, is public and available here api.vk.com. VK users’ rights are respected due to <a href="http://vk.com/privacy"> vk.com Terms of Service </a>.
<br/><br/>3. Any private user data, collected using VK API (api.vk.com) is used strictly locally on the device and is not transferred to a third party.
 ]]></string>
    <string name="terms_title">Terms of use</string>
    <string name="terms"><![CDATA[Users can employ the data, collected by the app, according to their will. Happy Santa LLC doesn’t bear any responsibility for the way users apply collected data.]]></string>



    <string name="important_notification">Important notification</string>
    <string name="title_activity_test_filter">TestFilterActivity</string>
    <string name="external">External</string>
    <string name="adduser">Spy upon external user</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="spyon">Spy on</string>
    <string name="fill_addnew">Enter user id or link</string>
    <string name="error_user_durov">We\'ve done with spying on him. Honeymoon is over</string>
    <string name="error_user_loading">Loading failed</string>
    <string name="error_user_exists">User already exists</string>
    <string name="error_user_idparsing">Uncorrect ID</string>
    <string name="error_user_deleted">User is deleted</string>
    <string name="connection">Connection</string>
    <string name="connection_external">External</string>
    <string name="connection_external_interval">Updates interval</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="mobile">mobile</string>
    <string name="iphone">iPhone</string>
    <string name="ipad">iPad</string>
    <string name="android">Android</string>
    <string name="wphone">Windows Phone</string>
    <string name="windowse">Windows8</string>
</resources>
