<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/notifications"
        android:layout="@layout/preference_header"
        android:dependency="notifications_enabled"
        >
        <SwitchPreference
            android:title="@string/enabled"
            android:key="notifications_enabled"
            android:layout="@layout/preference"
            android:negativeButtonText="@null"
            android:defaultValue="true"
            android:icon="@null"
            />
        <SwitchPreference
            android:title="@string/vibrate"
            android:key="notifications_vibrate"
            android:dependency="notifications_enabled"
            android:layout="@layout/preference"
            android:negativeButtonText="@null"
            android:defaultValue="true"
            android:icon="@null"
            />
        <RingtonePreference
            android:layout="@layout/preference"
            android:icon="@null"
            android:title="@string/sound"
            android:key="notifications_ringtone"
            android:ringtoneType="notification"
            android:dependency="notifications_enabled"
            android:defaultValue="content://settings/system/notification_sound" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/typings_notifications"
        android:layout="@layout/preference_header"
        android:dependency="notifications_enabled"
        >

        <SwitchPreference
            android:title="@string/enabled"
            android:key="notifications_typing_enabled"
            android:layout="@layout/preference"
            android:icon="@null"
            android:defaultValue="true"
            />
        <SwitchPreference
            android:title="@string/chats"
            android:key="notifications_chat_typing_enabled"
            android:layout="@layout/preference"
            android:icon="@null"
            android:defaultValue="true"
            />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/online_notifications"
        android:layout="@layout/preference_header"
        android:dependency="notifications_enabled"
        >
        <SwitchPreference
            android:title="@string/enabled"
            android:key="notifications_online_enabled"
            android:layout="@layout/preference"
            android:clickable="true"
            android:icon="@null"
            android:defaultValue="true"
            />
        <ListPreference
            android:title="@string/way_to_notify"
            android:key="notifications_online_type"
            android:dependency="notifications_online_enabled"
            android:entries="@array/notification_type"
            android:entryValues="@array/notification_type_values"
            android:defaultValue="1"
            android:layout="@layout/preference"
            android:negativeButtonText="@null"
            android:icon="@null"

            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/offline_notifications"
        android:layout="@layout/preference_header"
        android:dependency="notifications_enabled"
        >

        <SwitchPreference
            android:title="@string/enabled"
            android:key="notifications_offline_enabled"
            android:layout="@layout/preference"
            android:defaultValue="true"
            android:icon="@null"
            />
        <ListPreference
            android:title="@string/way_to_notify"
            android:key="notifications_offline_type"
            android:dependency="notifications_offline_enabled"
            android:entries="@array/notification_type"
            android:entryValues="@array/notification_type_values"
            android:defaultValue="1"
            android:layout="@layout/preference"
            android:negativeButtonText="@null"
            android:icon="@null"
            />
    </PreferenceCategory>

</PreferenceScreen>
