<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/help"
        android:key="help"
        android:layout="@layout/preference"
        android:icon="@null"
        />
    <PreferenceCategory
        android:title="@string/connection"
        android:layout="@layout/preference_header"
        >
        <ListPreference
            android:title="@string/connection_external"
            android:key="connection_external_interval"
            android:layout="@layout/preference"
            android:defaultValue="30"
            android:icon="@null"
            android:entries="@array/connection_external_interval"
            android:entryValues="@array/connection_external_interval_values"
            android:summary="@string/connection_external"
            />

    </PreferenceCategory>

</PreferenceScreen>
