<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.happysanta.spy.InfoActivity$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >
            <TextView
                android:textStyle="bold"
                android:padding="2dp"
                android:textColor="@color/blue_header"
                android:text="@string/privacypolicy_title"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/blue_header"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >
            <TextView
                android:id="@+id/privacytext"
                android:text="@string/privacypolicy"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >
            <TextView
                android:textStyle="bold"
                android:padding="2dp"
                android:textColor="@color/blue_header"
                android:text="@string/terms_title"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/blue_header"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >
            <TextView
                android:id="@+id/termstext"
                android:text="@string/terms"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
